--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="boilerplate">
+	<meta name="author" content="Adi Tokmo">
 	<meta http-equiv="X-UA-Compatible" content="ie-edge">
 	<title>Document</title>
 	<!-- Main CSS File -->
